www/assets/3/style/base.css
/* ... */
	body {
		font:13px/1.231 sans-serif;
		*font-size:small;
		color: #fff;
	}
	pre, code, kbd, samp { font-family: monospace, sans-serif; }
	/*
	sub, sup { font-size: 75%; line-height: 0; position: relative; }
	sup { top: -0.5em; }
	sub { bottom: -0.25em; }
	*/
	p {
		line-height: 1.4;
	}
/* Links */
	a img {
		border: 0;
	}
	
	a:link, a:visited {
		text-decoration: none;
		color: #ffb135;
		font-weight: bold;
	}
	
	a:hover, a:active {
		text-decoration: underline;
	}
/* Forms */
	/* Webkit browsers add a 2px margin outside the chrome of form elements */
	select, input, textarea, button { font:99% sans-serif; margin: 0; }
	
	input, select {
		vertical-align: middle;
		_vertical-align: text-bottom;
	}
	
	input[type="radio"] { vertical-align: text-bottom; }
	input[type="checkbox"] { vertical-align: bottom; *vertical-align: baseline; }
	
	textarea, input {
		font-family: arial, sans-serif;
		font-size: 1em;
	}
	
	button.custom {
		padding: 0;
		margin: 0;
		border: 0;
		background: none;
		cursor: pointer;
		overflow: visible;
		vertical-align: middle;
		font-size: 1em;
		width: auto;
	}
	button.custom::-moz-focus-inner { 
		border: 0;
		padding: 0;
	}
	legend { *margin-left: -7px; } 
	
	label, input[type="button"], input[type="submit"], input[type="image"], button { cursor: pointer; }

/*******************************************
 ********* Section specific styles *********
 *******************************************/

/* Main container */
	.container {		
		width: 100%;
		height: 100%;
		margin: 0 auto;
		position: relative;
		display: table;
		table-layout:fixed;
	}
	.container.intro {
		width: 835px;
	}
/* Header */
	.container > header {
		display: table-cell;
		vertical-align: middle;
		height: 79px;
	}
	.container.intro > header {
		height: 169px;
	}
	.container > header h1 {
		text-align: center;
		color: #fff;
		font: normal 5.3em/1 prowin, monospace;
		margin: 0;
		white-space: nowrap;
		/* I don't really want a 1px blur, but it works around http://code.google.com/p/chromium/issues/detail?id=86702 */
		text-shadow: #004a86 0 6px 1px;
		-webkit-transform: scale(0.7);
		-moz-transform: scale(0.7);
		-ms-transform: scale(0.7);
		-o-transform: scale(0.7);
		transform: scale(0.7);
		/* Fixes flickering issue in Chrome */
		-webkit-backface-visibility: hidden;
	}
	.container > header h1 span {
		display: inline-block;
		vertical-align: middle;
	}
	.container > header h1::before, .container > header h1::after {
		background: url('imgs/sprites1.png') no-repeat -10px -6px;
		width: 133px;
		height: 89px;
		display: inline-block;
		vertical-align: middle;
		content: '';
		margin: 0 30px 0 0;
	}
	.container > header h1::after {
		margin: 0 0 0 18px;
		-webkit-transform: scaleX(-1);
		-moz-transform: scaleX(-1);
		-ms-transform: scaleX(-1);
		-o-transform: scaleX(-1);
		transform: scaleX(-1);
	}
	.container.intro > header h1 {
		-webkit-transform: scale(1);
		-moz-transform: scale(1);
		-ms-transform: scale(1);
		-o-transform: scale(1);
		transform: scale(1);
	}
/* Canvas */
	.canvas-view {
		text-align: center;
		display: table-row;
		-webkit-user-select: none;
		-moz-user-select: none;
		-ms-user-select: none;
		-o-user-select: none;
		user-select: none;
	}
	.canvas-cell {
		display: table-cell;
		height: 100%;
		position: relative;
	}
	.canvas-inner {
		overflow: auto;
		background: #fff url('data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAABAAAAAQAQMAAAAlPW0iAAAABlBMVEX///8AAABVwtN+AAAAAnRSTlMzMz0oyR4AAAARSURBVAgdY/jPwIAVYRf9DwB+vw/xbMOy9QAAAABJRU5ErkJggg==');
		box-shadow: 0 4px 18px rgba(0,0,0,0.35);
		position: relative;
		height: 100%;
	}
	.opera .canvas-inner {
		/*
			Opera treats the 100% height as the height of the body element, not the
			table cell. This absolute layout works around that. However, it works
			because Opera recognises the position:relative on the table cell, which
			it shouldn't really. Using this fix on all browsers breaks layout in
			Firefox.
		*/
		position: absolute;
		top: 0;
		left: 0;
		right: 0;
		bottom: 0;
		height: auto;
	}
	.container.intro .canvas-cell {
		height: 170px;
		cursor: auto;
	}
	.container.intro .canvas-inner {
		overflow: hidden;
	}
	.sprite-canvas-container {
		position: absolute;
		min-width: 100%;
		min-height: 100%;
	}
	.container.intro .sprite-canvas-container {
		opacity: 0;
	}
	.sprite-canvas-container canvas {
		display: block;
	}
	/* Highlight */
		.sprite-canvas-container .highlight {
			background: rgba(0, 90, 255, 0.25);
			position: absolute;
			top: 0;
			left: 0;
			width: 5px;
			height: 5px;
			pointer-events: none;
			border: 1px solid rgba(0, 114, 255, 0.5);
			-moz-box-sizing: border-box;
			box-sizing: border-box;
			display: none;
			
			-webkit-transition: 0.5s ease-in-out;
			-moz-transition: 0.5s ease-in-out;
			-ms-transition: 0.5s ease-in-out;
			-o-transition: 0.5s ease-in-out;
			transition: 0.5s ease-in-out;
			
			-webkit-transition-property: border, background;
			-moz-transition-property: border, background;
			-ms-transition-property: border, background;
			-o-transition-property: border, background;
			transition-property: border, background;
		}
		
		.sprite-canvas-container .highlight.high-vis {
			background-color: rgba(0, 255, 48, 0.25);
			border-color: rgba(0, 255, 51, 0.5);
		}
	/* Upload button */
		.upload-input {
			position: absolute;
			top: -5000px;
			left: -5000px;
			cursor: pointer;
			z-index: 10;
		}
/* ... */

